--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ h1 {
     text-align:center;
     margin-top: 4em;
     font-size: 4em;
+    font-weight: 200;
     text-shadow: 1px 1px 1px #666666,
         0px 3px 4px rgba(155, 155, 155, 1);
 }
